feat: Add MyListingPage

--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -7,5 +7,6 @@
  @import "addProperty";
  @import "housesForRent";
  @import "houseDetails";
+ @import "myListings";
  @import "muiOverride";
  @import "home";
