--- a/src/assets/scss/_myListings.scss
+++ b/src/assets/scss/_myListings.scss
@@ -1,1 +1,199 @@
 @import "variables";
+
+.my-listings-container {
+  padding-top: $large-section-spacing;
+  padding-bottom: $large-section-spacing;
+}
+
+// Add Property
+.add-property-wrapper {
+  position: relative;
+  width: 100%;
+  height: 340px;
+  padding: 100px 30px 50px;
+  border: 1px solid $light-border;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  cursor: pointer;
+  transition: all 0.2s ease-out;
+  &:hover {
+    transform: scale(1.1);
+    box-shadow: 0 14px 24px rgba(46, 45, 54, 0.25);
+    //box-shadow: 0 14px 24px rgba(46, 45, 54, 0.25);
+  }
+}
+
+.plus-icon-wrapper {
+  height: 60px;
+  width: 60px;
+  border-radius: 50%;
+  background-color: $deep-purple;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 20px;
+  svg {
+    transform: rotate(45deg);
+    height: 20px;
+    width: 20px;
+  }
+}
+
+.add-property-text {
+  font-weight: $font-weight;
+  @extend %smallest-font-style;
+}
+
+.rent-place-faster {
+  margin-top: 65px;
+  @extend %smallest-font-style;
+  color: $button-inactive-colour;
+}
+
+// Add Property description
+.add-description-wrapper {
+  display: flex;
+  align-items: center;
+}
+.add-property-description {
+  padding-left: 100px;
+  .heading {
+    @extend %large-heading-style;
+    color: $font-dark-colour;
+    margin-bottom: 20px;
+  }
+  .text {
+    @extend %medium-font-style;
+    color: $button-inactive-colour;
+  }
+}
+
+// My listing card
+.my-listings-card-section {
+  padding-top: $large-section-spacing;
+  .your-listings {
+    text-align: center;
+    @extend %large-heading-style;
+    color: $font-dark-colour;
+    margin-bottom: 40px;
+  }
+}
+.listings-card-container {
+  .MuiPaper-elevation1 {
+    box-shadow: none;
+    border: 1px solid $light-border;
+    border-radius: 6px;
+  }
+  .house-cards {
+    transform: translateZ(0);
+    transition: all 0.2s ease-out;
+    &:hover {
+      transform: scale(1.1);
+      box-shadow: 0 14px 24px rgba(46, 45, 54, 0.25);
+    }
+  }
+  .house-card-text {
+    padding-top: 25px;
+    color: $button-inactive-colour;
+  }
+}
+.house-menu-icon {
+  position: absolute;
+  right: 3px;
+  top: 6px;
+  z-index: 1;
+  color: white;
+  height: 50px;
+  width: 50px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  transition: background-color 0.3s ease-out;
+  &:hover {
+    background-color: rgba(0, 0, 0, 0.2);
+  }
+  svg {
+    height: 30px;
+    width: 30px;
+  }
+}
+.house-card-dropdown {
+  position: absolute;
+  z-index: 1;
+  right: 20px;
+  top: -12px;
+  .dropdown-option-container {
+    .dropdown-option {
+      line-height: 15px;
+      padding: 0 20px;
+      height: 40px;
+      font-size: 12px;
+      &:hover {
+        border-radius: 5px;
+      }
+      span {
+        padding-left: 15px;
+      }
+      svg {
+        height: 16px;
+        width: 16px;
+        color: $deep-purple;
+      }
+    }
+  }
+}
+
+@media (max-width: 767.98px) {
+  .my-listings-container {
+    padding-top: 70px;
+    padding-bottom: 70px;
+  }
+  .add-property-wrapper {
+    &:hover {
+      transform: none;
+    }
+  }
+  .listings-card-container {
+    .house-cards {
+      &:hover {
+        transform: scale(1);
+        box-shadow: 0 14px 24px rgba(46, 45, 54, 0.25);
+      }
+      .house-price {
+        top: 20px;
+      }
+    }
+  }
+  .add-description-wrapper {
+    padding-top: $small-section-spacing;
+    padding-bottom: $small-section-spacing;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    .add-property-description {
+      padding-left: 0;
+      text-align: center;
+      .heading {
+        font-size: $medium-font-size;
+        line-height: $medium-large-line-height;
+        margin-bottom: 0;
+      }
+      .text {
+        font-size: $smallest-font-size;
+        color: $font-dark-colour;
+      }
+    }
+  }
+  .my-listings-card-section {
+    padding-top: $small-section-spacing;
+    h1.your-listings {
+      font-size: $medium-font-size;
+      line-height: $medium-large-line-height;
+      margin-bottom: 15px;
+    }
+  }
+}
