--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -8,5 +8,6 @@
  @import "housesForRent";
  @import "houseDetails";
  @import "myListings";
+ @import "auth";
  @import "muiOverride";
  @import "home";
