--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -25,6 +25,7 @@ $bg-colour-2: #d499ea;
 $bg-colour-3: #eea4b3;
 $bg-colour-4: #434057;
 $bg-colour-5: #f4f5f7;
+$bg-colour-5-deep: #F4F5FE;
 $bg-colour-6: #f8f9fa;
 $bg-overlay-colour: rgba(20,16,52,.69);
 $bg-overlay-colour-darker: #1f1b36;
