--- a/src/assets/scss/_auth.scss
+++ b/src/assets/scss/_auth.scss
@@ -2,6 +2,14 @@
 
 .auth-page {
   position: relative;
+  min-height: 100%;
+  height: 100vh;
+  padding: 50px 0;
+  flex: 1 0 auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   background-color: $bg-colour-5-deep;
 }
 
@@ -36,22 +44,18 @@
   }
 }
 
-.sign-up-container {
-  padding-top: $medium-section-spacing;
-  padding-bottom: 30px;
-}
-.sign-up-wrapper {
+.auth-wrapper {
   h1 {
     text-align: center;
     @extend %large-heading-style;
     margin-bottom: 30px;
   }
 }
-.sign-up {
+.auth {
   width: 100%;
   box-shadow: 0 14px 24px 0 rgba(46, 45, 54, 0.25);
 }
-.sign-up-form {
+.auth-form {
   padding: 50px 60px;
 }
 .social-auth-btn {
@@ -100,7 +104,7 @@
     right: 15px;
   }
 }
-.sign-up-button {
+.auth-button {
   height: 60px;
   width: 100%;
   border: none;
@@ -123,7 +127,10 @@
     color: $deep-purple;
   }
 }
-.sign-up-footer {
+.auth-footer {
+  position: absolute;
+  width: 100%;
+  bottom: 0;
   text-align: center;
   @extend %smallest-font-style;
   color: $button-inactive-colour;
@@ -135,6 +142,18 @@
   }
 }
 
+.password-reset-text {
+  text-align: center;
+  @extend %medium-font-style;
+}
+.forgot-password {
+  margin-top: 10px;
+  @extend %smallest-font-style;
+  text-align: right;
+  a {
+    color: $deep-purple;
+  }
+}
 @media (max-width: 767.98px) {
   %overlay-mobile--controls {
     background-color: transparent;
@@ -148,17 +167,37 @@
       }
     }
   }
+  .auth-page{
+    min-height: 100%;
+    height: 100%;
+    background-color: white;
+  }
   .cancel-button {
     @extend %overlay-mobile--controls;
     right: 5px;
     top: 5px;
   }
-  .sign-up-wrapper {
+  .auth-wrapper {
     h1 {
       display: none;
     }
   }
-  .sign-up-form {
+  .auth-form {
     padding: 60px 20px;
+  }
+}
+@media (max-width: 372px) {
+  .social-auth-btn {
+    padding: 0 10px;
+
+    span {
+      font-size: $small-font-size;
+      line-height: $small-line-height;
+      padding-left: 10px;
+    }
+  }
+  .auth-button {
+    font-size: $small-font-size;
+    line-height: $small-line-height;
   }
 }
