--- a/src/assets/scss/_renting.scss
+++ b/src/assets/scss/_renting.scss
@@ -67,12 +67,12 @@
     margin-bottom: 2rem;
   }
   p {
-    font-size: $small-font-size;
+    font-size: $medium-font-size;
     line-height: $medium-line-height;
     color: $font-dark-colour;
   }
   a {
-    font-size: $smallest-font-size;
+    font-size: $small-font-size;
     line-height: $small-line-height;
     color: $mediumpurple;
   }
