--- a/src/assets/scss/_mixins.scss
+++ b/src/assets/scss/_mixins.scss
@@ -15,6 +15,7 @@
   }
   h5 {
     font-size: $small-font-size;
+    font-family: $bold-font-family;
     font-weight: 700;
     margin-bottom: 0;
     opacity: 0.8;
