--- a/src/assets/scss/_addProperty.scss
+++ b/src/assets/scss/_addProperty.scss
@@ -262,20 +262,7 @@
 .post-listing-button-section {
   padding-bottom: $small-section-spacing;
   .listing-button {
-    font-family: $bold-font-family;
-    width: 100%;
-    border: none;
-    font-size: 24px;
-    color: white;
-    line-height: 60px;
-    font-weight: $font-weight;
-    border-radius: 5px;
-    background-color: $button-inactive-colour;
-    box-shadow: 0 8px 12px 0 rgba(46, 45, 54, 0.25);
-    transition: background-color 0.3s ease;
-    &:hover {
-      background-color: #9c94b6;
-    }
+    @extend %listing-button;
   }
   .listing-terms {
     text-align: center;
