--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -155,3 +155,20 @@ $svg-big-size: 30px;
     transform: scale(1.1);
   }
 }
+
+%listing-button{
+  font-family: $bold-font-family;
+  width: 100%;
+  border: none;
+  font-size: 24px;
+  color: white;
+  line-height: 60px;
+  font-weight: $font-weight;
+  border-radius: 5px;
+  background-color: $button-inactive-colour;
+  box-shadow: 0 8px 12px 0 rgba(46, 45, 54, 0.25);
+  transition: background-color 0.3s ease;
+  &:hover {
+    background-color: #9c94b6;
+  }
+}
