--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -18,5 +18,6 @@
  @import "myListings";
  @import "auth";
  @import "profileSettings";
+ @import "policy";
  @import "muiOverride";
  @import "home";
