--- a/src/assets/scss/style.css
+++ b/src/assets/scss/style.css
@@ -9925,13 +9925,20 @@ h3 {
   cursor: pointer;
 }
 
+.policy-heading {
+  font-size: 72px;
+  line-height: 72px;
+  font-family: proxima-nova-bold, sans-serif;
+  font-weight: 700;
+}
+
 .listing-categories-section h1, .available-cities-section h1, .cities-title h1, .auth-wrapper h1, .my-listings-card-section .your-listings, .add-property-description .heading, .similar-properties-section h1, .how-to-rent-header, .property-description h1, .property-page-container .picture-number .large-font, .section-header, .renting-search .renting-search-content h1, .tips h1, .renting-services h1, .renting-header .renting-header-text h1 {
   font-size: 48px;
   line-height: 48px;
   font-weight: 700;
 }
 
-.text-box-header, .auth-button, .post-listing-section .available-from .section-header {
+.policy-sub-header, .text-box-header, .auth-button, .post-listing-section .available-from .section-header {
   font-size: 24px;
   line-height: 28px;
   font-weight: 700;
@@ -10084,13 +10091,20 @@ h1 {
   cursor: pointer;
 }
 
+.policy-heading {
+  font-size: 72px;
+  line-height: 72px;
+  font-family: proxima-nova-bold, sans-serif;
+  font-weight: 700;
+}
+
 .listing-categories-section h1, .available-cities-section h1, .cities-title h1, .auth-wrapper h1, .my-listings-card-section .your-listings, .add-property-description .heading, .similar-properties-section h1, .how-to-rent-header, .property-description h1, .property-page-container .picture-number .large-font, .section-header, .renting-search .renting-search-content h1, .tips h1, .renting-services h1, .renting-header .renting-header-text h1 {
   font-size: 48px;
   line-height: 48px;
   font-weight: 700;
 }
 
-.text-box-header, .auth-button, .post-listing-section .available-from .section-header {
+.policy-sub-header, .text-box-header, .auth-button, .post-listing-section .available-from .section-header {
   font-size: 24px;
   line-height: 28px;
   font-weight: 700;
@@ -10190,13 +10204,20 @@ h1 {
   cursor: pointer;
 }
 
+.policy-heading {
+  font-size: 72px;
+  line-height: 72px;
+  font-family: proxima-nova-bold, sans-serif;
+  font-weight: 700;
+}
+
 .listing-categories-section h1, .available-cities-section h1, .cities-title h1, .auth-wrapper h1, .my-listings-card-section .your-listings, .add-property-description .heading, .similar-properties-section h1, .how-to-rent-header, .property-description h1, .property-page-container .picture-number .large-font, .section-header, .renting-search .renting-search-content h1, .tips h1, .renting-services h1, .renting-header .renting-header-text h1 {
   font-size: 48px;
   line-height: 48px;
   font-weight: 700;
 }
 
-.text-box-header, .auth-button, .post-listing-section .available-from .section-header {
+.policy-sub-header, .text-box-header, .auth-button, .post-listing-section .available-from .section-header {
   font-size: 24px;
   line-height: 28px;
   font-weight: 700;
@@ -10697,13 +10718,20 @@ html {
   cursor: pointer;
 }
 
+.policy-heading {
+  font-size: 72px;
+  line-height: 72px;
+  font-family: proxima-nova-bold, sans-serif;
+  font-weight: 700;
+}
+
 .listing-categories-section h1, .available-cities-section h1, .cities-title h1, .auth-wrapper h1, .my-listings-card-section .your-listings, .add-property-description .heading, .similar-properties-section h1, .how-to-rent-header, .property-description h1, .property-page-container .picture-number .large-font, .section-header, .renting-search .renting-search-content h1, .tips h1, .renting-services h1, .renting-header .renting-header-text h1 {
   font-size: 48px;
   line-height: 48px;
   font-weight: 700;
 }
 
-.text-box-header, .auth-button, .post-listing-section .available-from .section-header {
+.policy-sub-header, .text-box-header, .auth-button, .post-listing-section .available-from .section-header {
   font-size: 24px;
   line-height: 28px;
   font-weight: 700;
@@ -10858,13 +10886,20 @@ html {
   cursor: pointer;
 }
 
+.policy-heading {
+  font-size: 72px;
+  line-height: 72px;
+  font-family: proxima-nova-bold, sans-serif;
+  font-weight: 700;
+}
+
 .listing-categories-section h1, .available-cities-section h1, .cities-title h1, .auth-wrapper h1, .my-listings-card-section .your-listings, .add-property-description .heading, .similar-properties-section h1, .how-to-rent-header, .property-description h1, .property-page-container .picture-number .large-font, .section-header, .renting-search .renting-search-content h1, .tips h1, .renting-services h1, .renting-header .renting-header-text h1 {
   font-size: 48px;
   line-height: 48px;
   font-weight: 700;
 }
 
-.text-box-header, .auth-button, .post-listing-section .available-from .section-header {
+.policy-sub-header, .text-box-header, .auth-button, .post-listing-section .available-from .section-header {
   font-size: 24px;
   line-height: 28px;
   font-weight: 700;
@@ -10964,13 +10999,20 @@ html {
   cursor: pointer;
 }
 
+.policy-heading {
+  font-size: 72px;
+  line-height: 72px;
+  font-family: proxima-nova-bold, sans-serif;
+  font-weight: 700;
+}
+
 .listing-categories-section h1, .available-cities-section h1, .cities-title h1, .auth-wrapper h1, .my-listings-card-section .your-listings, .add-property-description .heading, .similar-properties-section h1, .how-to-rent-header, .property-description h1, .property-page-container .picture-number .large-font, .section-header, .renting-search .renting-search-content h1, .tips h1, .renting-services h1, .renting-header .renting-header-text h1 {
   font-size: 48px;
   line-height: 48px;
   font-weight: 700;
 }
 
-.text-box-header, .auth-button, .post-listing-section .available-from .section-header {
+.policy-sub-header, .text-box-header, .auth-button, .post-listing-section .available-from .section-header {
   font-size: 24px;
   line-height: 28px;
   font-weight: 700;
@@ -11387,13 +11429,20 @@ html {
   cursor: pointer;
 }
 
+.policy-heading {
+  font-size: 72px;
+  line-height: 72px;
+  font-family: proxima-nova-bold, sans-serif;
+  font-weight: 700;
+}
+
 .listing-categories-section h1, .available-cities-section h1, .cities-title h1, .auth-wrapper h1, .my-listings-card-section .your-listings, .add-property-description .heading, .similar-properties-section h1, .how-to-rent-header, .property-description h1, .property-page-container .picture-number .large-font, .section-header, .renting-header .renting-header-text h1, .renting-services h1, .tips h1, .renting-search .renting-search-content h1 {
   font-size: 48px;
   line-height: 48px;
   font-weight: 700;
 }
 
-.text-box-header, .auth-button, .post-listing-section .available-from .section-header {
+.policy-sub-header, .text-box-header, .auth-button, .post-listing-section .available-from .section-header {
   font-size: 24px;
   line-height: 28px;
   font-weight: 700;
@@ -11786,13 +11835,20 @@ html {
   cursor: pointer;
 }
 
+.policy-heading {
+  font-size: 72px;
+  line-height: 72px;
+  font-family: proxima-nova-bold, sans-serif;
+  font-weight: 700;
+}
+
 .listing-categories-section h1, .available-cities-section h1, .cities-title h1, .auth-wrapper h1, .my-listings-card-section .your-listings, .add-property-description .heading, .similar-properties-section h1, .how-to-rent-header, .property-description h1, .property-page-container .picture-number .large-font, .renting-header .renting-header-text h1, .renting-services h1, .tips h1, .renting-search .renting-search-content h1, .section-header {
   font-size: 48px;
   line-height: 48px;
   font-weight: 700;
 }
 
-.text-box-header, .auth-button, .post-listing-section .available-from .section-header {
+.policy-sub-header, .text-box-header, .auth-button, .post-listing-section .available-from .section-header {
   font-size: 24px;
   line-height: 28px;
   font-weight: 700;
@@ -12406,13 +12462,20 @@ html {
   cursor: pointer;
 }
 
+.policy-heading {
+  font-size: 72px;
+  line-height: 72px;
+  font-family: proxima-nova-bold, sans-serif;
+  font-weight: 700;
+}
+
 .listing-categories-section h1, .available-cities-section h1, .cities-title h1, .auth-wrapper h1, .my-listings-card-section .your-listings, .add-property-description .heading, .similar-properties-section h1, .how-to-rent-header, .property-description h1, .property-page-container .picture-number .large-font, .renting-header .renting-header-text h1, .renting-services h1, .tips h1, .renting-search .renting-search-content h1, .section-header {
   font-size: 48px;
   line-height: 48px;
   font-weight: 700;
 }
 
-.text-box-header, .auth-button, .post-listing-section .available-from .section-header {
+.policy-sub-header, .text-box-header, .auth-button, .post-listing-section .available-from .section-header {
   font-size: 24px;
   line-height: 28px;
   font-weight: 700;
@@ -13294,13 +13357,20 @@ html {
   cursor: pointer;
 }
 
+.policy-heading {
+  font-size: 72px;
+  line-height: 72px;
+  font-family: proxima-nova-bold, sans-serif;
+  font-weight: 700;
+}
+
 .listing-categories-section h1, .available-cities-section h1, .cities-title h1, .auth-wrapper h1, .my-listings-card-section .your-listings, .add-property-description .heading, .renting-header .renting-header-text h1, .renting-services h1, .tips h1, .renting-search .renting-search-content h1, .section-header, .property-page-container .picture-number .large-font, .property-description h1, .how-to-rent-header, .similar-properties-section h1 {
   font-size: 48px;
   line-height: 48px;
   font-weight: 700;
 }
 
-.text-box-header, .auth-button, .post-listing-section .available-from .section-header {
+.policy-sub-header, .text-box-header, .auth-button, .post-listing-section .available-from .section-header {
   font-size: 24px;
   line-height: 28px;
   font-weight: 700;
@@ -13585,13 +13655,20 @@ html {
   cursor: pointer;
 }
 
+.policy-heading {
+  font-size: 72px;
+  line-height: 72px;
+  font-family: proxima-nova-bold, sans-serif;
+  font-weight: 700;
+}
+
 .listing-categories-section h1, .available-cities-section h1, .cities-title h1, .auth-wrapper h1, .renting-header .renting-header-text h1, .renting-services h1, .tips h1, .renting-search .renting-search-content h1, .section-header, .property-page-container .picture-number .large-font, .property-description h1, .how-to-rent-header, .similar-properties-section h1, .add-property-description .heading, .my-listings-card-section .your-listings {
   font-size: 48px;
   line-height: 48px;
   font-weight: 700;
 }
 
-.text-box-header, .auth-button, .post-listing-section .available-from .section-header {
+.policy-sub-header, .text-box-header, .auth-button, .post-listing-section .available-from .section-header {
   font-size: 24px;
   line-height: 28px;
   font-weight: 700;
@@ -13886,13 +13963,20 @@ html {
   cursor: pointer;
 }
 
+.policy-heading {
+  font-size: 72px;
+  line-height: 72px;
+  font-family: proxima-nova-bold, sans-serif;
+  font-weight: 700;
+}
+
 .listing-categories-section h1, .available-cities-section h1, .cities-title h1, .renting-header .renting-header-text h1, .renting-services h1, .tips h1, .renting-search .renting-search-content h1, .section-header, .property-page-container .picture-number .large-font, .property-description h1, .how-to-rent-header, .similar-properties-section h1, .add-property-description .heading, .my-listings-card-section .your-listings, .auth-wrapper h1 {
   font-size: 48px;
   line-height: 48px;
   font-weight: 700;
 }
 
-.text-box-header, .post-listing-section .available-from .section-header, .auth-button {
+.policy-sub-header, .text-box-header, .post-listing-section .available-from .section-header, .auth-button {
   font-size: 24px;
   line-height: 28px;
   font-weight: 700;
@@ -14066,13 +14150,155 @@ html {
   cursor: pointer;
 }
 
+.policy-heading {
+  font-size: 72px;
+  line-height: 72px;
+  font-family: proxima-nova-bold, sans-serif;
+  font-weight: 700;
+}
+
 .listing-categories-section h1, .available-cities-section h1, .cities-title h1, .renting-header .renting-header-text h1, .renting-services h1, .tips h1, .renting-search .renting-search-content h1, .section-header, .property-page-container .picture-number .large-font, .property-description h1, .how-to-rent-header, .similar-properties-section h1, .add-property-description .heading, .my-listings-card-section .your-listings, .auth-wrapper h1 {
   font-size: 48px;
   line-height: 48px;
   font-weight: 700;
 }
 
-.post-listing-section .available-from .section-header, .auth-button, .text-box-header {
+.policy-sub-header, .post-listing-section .available-from .section-header, .auth-button, .text-box-header {
+  font-size: 24px;
+  line-height: 28px;
+  font-weight: 700;
+  font-family: proxima-nova-bold, sans-serif;
+}
+
+.rental-steps-container .switch-btn, .header-btn-container p, .property-page-container .picture-number .small-font, .property-utility .value, .property-description-text span, .property-description-text .full-description, .landlord-short-details h3, .landlord-name-address h3, .add-property-description .text, .social-auth-btn span, .password-reset-text {
+  font-size: 20px;
+  line-height: 28px;
+}
+
+.rental-steps-container .switch-btn, .header-btn-container p, .property-page-container .picture-number .small-font, .property-utility .value, .landlord-short-details h3, .landlord-name-address h3, .social-auth-btn span, .password-reset-text {
+  font-family: proxima-nova-bold, sans-serif;
+}
+
+.property-monthly-price .monthly-price-header, .show-more-properties span, .amenities-icon-wrapper span, .landlord-short-details span, .phone-and-email, .landlord-name-address span, .landlord-stats, .add-property-text, .rent-place-faster, .with-email, .already-signed-up, .auth-footer, .forgot-password {
+  font-size: 14px;
+  line-height: 20px;
+}
+
+.perfect-place-section .perfect-place-content button, .rental-instruction .learn-more-btn button, .header-btn-container button, .rent-list-btn button, .go-to-inbox, .renting-search .renting-search-content button {
+  text-align: center;
+  border: none;
+  cursor: pointer;
+  font-weight: 700;
+  color: white;
+}
+
+.contact-landlord-button, .show-more-wrapper .show-more-btn {
+  border-radius: 3px;
+  background: transparent;
+  cursor: pointer;
+}
+
+.listing-image-container, .property-image-container {
+  position: relative;
+  bottom: 70px;
+}
+
+.listing-image, .property-image {
+  position: relative;
+  cursor: pointer;
+  height: 250px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 6px;
+  background-color: #f4f5f7;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  text-align: center;
+  transition: all 0.3s ease-out;
+  margin-top: 30px;
+}
+.listing-image:hover, .property-image:hover {
+  box-shadow: 0 8px 12px 0 rgba(46, 45, 54, 0.25);
+  transform: scale(1.1);
+}
+
+.post-listing-button-section .listing-button, .save-button {
+  font-family: proxima-nova-bold, sans-serif;
+  width: 100%;
+  border: none;
+  font-size: 24px;
+  color: white;
+  line-height: 60px;
+  font-weight: 700;
+  border-radius: 5px;
+  background-color: #9c99b6;
+  box-shadow: 0 8px 12px 0 rgba(46, 45, 54, 0.25);
+  transition: background-color 0.3s ease;
+}
+.post-listing-button-section .listing-button:hover, .save-button:hover {
+  background-color: #9c94b6;
+}
+
+.policy-page {
+  padding-top: 150px;
+  padding-bottom: 150px;
+}
+
+.policy-heading {
+  text-align: center;
+  margin-bottom: 72px;
+}
+
+.policy-sub-header {
+  margin: 88px 0 25px;
+}
+
+.policy-text {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+.policy-text strong {
+  font-family: proxima-nova-bold, sans-serif;
+}
+
+.header-btn-container, .header-input, .rental-steps-container .switch-btn, .rental-steps-container .switch, .rent-list-btn, .nav-item-container, .nav-items, .list-property, .renting-header .switch, .renting-header .switch-btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.header-btn-container, .header-input {
+  flex-direction: column;
+}
+
+.rental-steps-container .switch-btn, .rental-steps-container .switch, .rent-list-btn, .nav-item-container, .nav-items, .list-property, .renting-header .switch, .renting-header .switch-btn {
+  flex-direction: row;
+}
+
+.listing-categories-section a, .available-cities-section a, .footer p, .footer a {
+  font-size: 14px;
+  line-height: 20px;
+  color: mediumpurple;
+  cursor: pointer;
+}
+
+.policy-heading {
+  font-size: 72px;
+  line-height: 72px;
+  font-family: proxima-nova-bold, sans-serif;
+  font-weight: 700;
+}
+
+.listing-categories-section h1, .available-cities-section h1, .cities-title h1, .renting-header .renting-header-text h1, .renting-services h1, .tips h1, .renting-search .renting-search-content h1, .section-header, .property-page-container .picture-number .large-font, .property-description h1, .how-to-rent-header, .similar-properties-section h1, .add-property-description .heading, .my-listings-card-section .your-listings, .auth-wrapper h1 {
+  font-size: 48px;
+  line-height: 48px;
+  font-weight: 700;
+}
+
+.post-listing-section .available-from .section-header, .auth-button, .text-box-header, .policy-sub-header {
   font-size: 24px;
   line-height: 28px;
   font-weight: 700;
@@ -14179,6 +14405,7 @@ html {
 
 .MuiInputBase-input {
   font-size: 20px;
+  font-family: proxima-nova-regular, sans-serif;
 }
 
 .header-btn-container, .header-input, .rental-steps-container .switch-btn, .rental-steps-container .switch, .rent-list-btn, .nav-item-container, .nav-items, .list-property, .renting-header .switch, .renting-header .switch-btn {
@@ -14202,13 +14429,20 @@ html {
   cursor: pointer;
 }
 
+.policy-heading {
+  font-size: 72px;
+  line-height: 72px;
+  font-family: proxima-nova-bold, sans-serif;
+  font-weight: 700;
+}
+
 .listing-categories-section h1, .available-cities-section h1, .cities-title h1, .renting-header .renting-header-text h1, .renting-services h1, .tips h1, .renting-search .renting-search-content h1, .section-header, .property-page-container .picture-number .large-font, .property-description h1, .how-to-rent-header, .similar-properties-section h1, .add-property-description .heading, .my-listings-card-section .your-listings, .auth-wrapper h1 {
   font-size: 48px;
   line-height: 48px;
   font-weight: 700;
 }
 
-.post-listing-section .available-from .section-header, .auth-button, .text-box-header {
+.post-listing-section .available-from .section-header, .auth-button, .text-box-header, .policy-sub-header {
   font-size: 24px;
   line-height: 28px;
   font-weight: 700;
@@ -14308,13 +14542,20 @@ html {
   cursor: pointer;
 }
 
+.policy-heading {
+  font-size: 72px;
+  line-height: 72px;
+  font-family: proxima-nova-bold, sans-serif;
+  font-weight: 700;
+}
+
 .listing-categories-section h1, .available-cities-section h1, .cities-title h1, .renting-header .renting-header-text h1, .renting-services h1, .tips h1, .renting-search .renting-search-content h1, .section-header, .property-page-container .picture-number .large-font, .property-description h1, .how-to-rent-header, .similar-properties-section h1, .add-property-description .heading, .my-listings-card-section .your-listings, .auth-wrapper h1 {
   font-size: 48px;
   line-height: 48px;
   font-weight: 700;
 }
 
-.post-listing-section .available-from .section-header, .auth-button, .text-box-header {
+.post-listing-section .available-from .section-header, .auth-button, .text-box-header, .policy-sub-header {
   font-size: 24px;
   line-height: 28px;
   font-weight: 700;
