--- a/src/assets/scss/_payment.scss
+++ b/src/assets/scss/_payment.scss
@@ -1,5 +1,6 @@
 @import "variables";
 
+// Payment pages
 .payment-page {
   padding-top: $large-section-spacing;
   padding-bottom: $large-section-spacing;
@@ -157,4 +158,102 @@
   margin-bottom: 30px;
   margin-top: 50px;
   @extend %listing-button;
+}
+
+// Pricing page
+.pricing-page {
+  padding-top: $large-section-spacing;
+  padding-bottom: $large-section-spacing;
+}
+.pricing-card {
+  border: 1px solid $light-border;
+  border-radius: 20px;
+  padding: 30px;
+  margin: 25px 0;
+}
+.price-name {
+  @extend %medium-large-heading-style;
+}
+
+.price-amount {
+  font-family: $bold-font-family;
+  margin: 15px 0;
+  display: flex;
+  align-items: center;
+  .amount {
+    @extend %large-heading-style;
+  }
+}
+
+.pricing-features-wrapper {
+  margin-top: 25px;
+  margin-bottom: 25px;
+}
+
+.pricing-feature {
+  height: 50px;
+  line-height: 20px;
+  display: flex;
+  align-items: center;
+
+  .feature {
+    padding-left: 15px;
+  }
+}
+.check-icon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 18px;
+  width: 18px;
+  border-radius: 50px;
+  background: $mediumpurple;
+  color: white;
+  svg {
+    height: 12px;
+    width: 12px;
+  }
+}
+
+.plan-button {
+  border: 1px solid $mediumpurple;
+  padding: 10px 16px;
+  border-radius: 6px;
+  background: transparent;
+  width: 100%;
+  color: $deeper-purple;
+  font-weight: 700;
+  font-family: $bold-font-family;
+  &:hover{
+    transition: all 0.3s ease-out;
+    color: white;
+    background-color: $mediumpurple;
+  }
+}
+
+.popular-card {
+  color: white;
+  width: 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+
+  .price-description {
+    opacity: 0.6;
+  }
+  .check-icon {
+    background: white;
+    svg {
+      color: $deep-purple;
+    }
+  }
+  .plan-button {
+    background-color: white;
+    border: none;
+    &:hover{
+      transition: all 0.3s ease-out;
+      color: white;
+      background-color: $cancel-color;
+    }
+  }
 }
