--- a/src/assets/scss/_payment.scss
+++ b/src/assets/scss/_payment.scss
@@ -1,15 +1,38 @@
 @import "variables";
 
+.pricing-header {
+  .renting-header {
+    height: 500px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    text-align: center;
+  }
+
+  .pricing-header-text {
+    @extend %largest-heading-style;
+  }
+
+  .pricing-text {
+    @extend %small-font-style;
+    font-weight: $font-weight;
+    font-family: $bold-font-family;
+  }
+}
+
 // Payment pages
 .payment-page {
   padding-top: $large-section-spacing;
   padding-bottom: $large-section-spacing;
   min-height: 100vh;
+
   .MuiTableCell-head {
     font-weight: $font-weight;
     font-family: $bold-font-family;
     font-size: $small-font-size;
   }
+
   .MuiPaper-elevation1 {
     box-shadow: none;
     border: 1px solid $light-border;
@@ -19,11 +42,13 @@
 
 .payment-sidebar {
   padding-bottom: 20px;
+
   h3 {
     @extend %medium-large-heading-style;
     padding: 1.25rem 2rem 1.25rem;
   }
 }
+
 .sidebar-option-wrapper {
   li {
     cursor: pointer;
@@ -37,11 +62,13 @@
       @extend %small-font-style;
       padding-left: 2rem;
     }
+
     &:hover {
       transition: all 0.3s ease-out;
       background-color: rgba(0, 0, 0, 0.04);
     }
   }
+
   .active {
     background-color: rgba(0, 0, 0, 0.08);
     font-weight: $font-weight;
@@ -55,20 +82,24 @@
     background-color: rgba(0, 0, 0, 0.04);
     padding: 1.5rem 2rem;
     border-bottom: 1px solid $light-border;
+
     h3 {
       margin-bottom: 0;
     }
   }
 }
+
 .panel-content-container {
   padding: 1rem;
   overflow: auto;
 }
+
 .panel-row {
   display: flex;
   align-items: center;
   justify-content: space-between;
   padding: 1rem;
+
   &.active {
     padding: 10px 10px 10px 35px;
   }
@@ -79,16 +110,19 @@
   display: flex;
   align-items: center;
   min-width: 150px;
+
   .type {
     @extend %small-font-style;
     font-weight: $font-weight;
     font-family: $bold-font-family;
     white-space: nowrap;
     cursor: pointer;
+
     &:hover {
       border-bottom: 1px solid $font-dark-colour;
     }
   }
+
   .icon {
     position: absolute;
     bottom: 0;
@@ -100,6 +134,7 @@
     justify-content: center;
     align-items: center;
     border: 3px solid $light-green;
+
     svg {
       height: 15px;
       width: 15px;
@@ -107,8 +142,10 @@
     }
   }
 }
+
 .plan-price {
   min-width: 150px;
+
   .price {
     @extend %small-font-style;
     font-weight: $font-weight;
@@ -116,6 +153,7 @@
     padding-right: 10px;
   }
 }
+
 .plan-duration {
   padding-left: 10px;
 }
@@ -126,15 +164,18 @@
   background: transparent;
   margin-left: 10px;
 }
+
 .subscribe-button {
   @extend %sub-button;
   border: 1px solid $light-green;
   color: $light-green;
+
   &:hover {
     background: $light-green;
     color: white;
   }
 }
+
 .subscribe-button-cancel {
   border: 1px solid $cancel-color;
   color: white;
@@ -144,10 +185,12 @@
 
 .payment-form {
   margin-top: 70px;
+
   .MuiInputBase-input {
     font-size: $small-font-size;
     font-family: $regular-font-family;
   }
+
   .MuiFormLabel-root {
     font-family: $regular-font-family;
     font-size: $small-font-size;
@@ -165,12 +208,20 @@
   padding-top: $large-section-spacing;
   padding-bottom: $large-section-spacing;
 }
+
+.pricing-cards-text {
+  @extend %large-heading-style;
+  text-align: center;
+  margin-bottom: 50px;
+}
+
 .pricing-card {
   border: 1px solid $light-border;
   border-radius: 20px;
   padding: 30px;
   margin: 25px 0;
 }
+
 .price-name {
   @extend %medium-large-heading-style;
 }
@@ -180,6 +231,7 @@
   margin: 15px 0;
   display: flex;
   align-items: center;
+
   .amount {
     @extend %large-heading-style;
   }
@@ -200,6 +252,7 @@
     padding-left: 15px;
   }
 }
+
 .check-icon {
   display: flex;
   justify-content: center;
@@ -209,6 +262,7 @@
   border-radius: 50px;
   background: $mediumpurple;
   color: white;
+
   svg {
     height: 12px;
     width: 12px;
@@ -221,10 +275,11 @@
   border-radius: 6px;
   background: transparent;
   width: 100%;
-  color: $deeper-purple;
+  color: $deep-purple;
   font-weight: 700;
   font-family: $bold-font-family;
-  &:hover{
+
+  &:hover {
     transition: all 0.3s ease-out;
     color: white;
     background-color: $mediumpurple;
@@ -241,19 +296,34 @@
   .price-description {
     opacity: 0.6;
   }
+
   .check-icon {
     background: white;
+
     svg {
       color: $deep-purple;
     }
   }
+
   .plan-button {
     background-color: white;
     border: none;
-    &:hover{
+
+    &:hover {
       transition: all 0.3s ease-out;
       color: white;
       background-color: $cancel-color;
     }
   }
 }
+
+.faq-pricing-section {
+  padding-top: $medium-section-spacing;
+  padding-bottom: $large-section-spacing;
+  background-color: $bg-colour-6;
+
+  h3 {
+    text-align: center;
+  }
+}
+
